# aba

./: .dockerignore  .gitignore  .sops.yaml  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  Dockerfile  PROMPT.md  PROMPT_build.md  PROMPT_plan.md  docker-entrypoint.sh  flake.nix  loop.sh  railway.json  ralph-loop.sh
.cargo_home/: .global-cache
docs/: loom-reference.md
docs/research/: humanlayer-patterns-for-aba.md  loom-agents-md-conventions.md  loom-all-crates-inventory.md  loom-all-specs-inventory.md  loom-analytics-observability.md  loom-auth-security-config.md  loom-cli-tui-web-acp.md  loom-core-state-machine.md  loom-data-flow-traces.md  loom-error-handling-recovery.md  loom-gap-analysis-vs-aba.md  loom-geoffrey-talks-writings.md  loom-infrastructure-nix-deploy.md  loom-llm-proxy-providers.md  loom-thread-persistence-search.md  loom-tool-system.md  loom-vcs-spool-autocommit.md  loom-weaver-system.md  loom-workflows-agents-automation.md
docs/wiki/: auth-security.md  cli-interfaces.md  error-handling.md  gap-analysis.md  geoffrey-philosophy.md  infrastructure.md  llm-proxy.md  observability.md  state-machine.md  thread-persistence.md  tool-system.md  vcs-autocommit.md  weaver-system.md
dummy-project/: Cargo.toml
dummy-project/src/: main.rs
nixos/: configuration.nix  hardware-configuration.nix
scripts/: repl.sh  token-manager.sh
secrets/: api-keys.yaml
specs/: _manifest.toml  agent-core.md  conversational-layer.md  distribution.md  observability.md  security.md  self-bootstrapping.md  source-control.md
src/: agent.rs  config.rs  llm.rs  main.rs  tools.rs
(+7 files in other folders)
