[package]
name = "aba"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.5"
dotenvy = "0.15"
dialoguer = "0.11"
directories = "5.0"
toml = "0.8"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Deny correctness lints (real bugs)
correctness = { level = "deny", priority = -1 }
# Warn on pedantic lints (style/best-practice, occasionally noisy)
pedantic = { level = "warn", priority = -1 }
# Deny common mistake patterns
all = { level = "deny", priority = -1 }
# Allow specific pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
